--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> Current Projects</a>
+      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> CURRENT PROJECTS</a>
       <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> MY WORK</a>
       <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
@@ -218,7 +218,7 @@ body, html {
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>My Skills.</h3>
-      <p></p>
+      <p>T</p>
       <p></p>
     </div>
     <div class="w3-col m6">
@@ -318,7 +318,7 @@ body, html {
       </p>
     </form>
     <!-- Image of location/map -->
-    <img src="sliki cicka.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+    <img src="slikadole.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
   </div>
 </div>
 
