--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@ body, html {
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
       <p>POSTERS</p>
-      <img src="photoshop.JPG" style="width:100%"  class="w3-hover-opacity" >
+    <a href="posteri.html"><img src="photoshop.JPG" style="width:100%"  class="w3-hover-opacity"></a>
     </div>
     <div class="w3-col l3 m6">
       <p>PHOTOSHOOTS</p>
-      <img src="slikanje.jpg" style="width:100%"  class="w3-hover-opacity" >
+     <a href="photoshoot.html"><img src="slikanje.jpg" style="width:100%"  class="w3-hover-opacity" ></a>
     </div>
     <div class="w3-col l3 m6">
       <p>WEB DESIGN</p>
@@ -197,7 +197,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6">
       <p>VIDEO EDITING</p>
-      <img src="pp.jpg" style="width:100%"  class="w3-hover-opacity" >
+      <a href="videa.html"> <img src="pp.jpg" style="width:100%"  class="w3-hover-opacity" ></a>
     </div>
   </div>
   <br>
@@ -218,7 +218,7 @@ body, html {
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>My Skills.</h3>
-      <p>T</p>
+      <p></p>
       <p></p>
     </div>
     <div class="w3-col m6">
