--- a/photoshoot.html
+++ b/photoshoot.html
@@ -63,33 +63,33 @@ body, html {
         <br>
         <br>
         <br>
-      <img src="PHOTOSHOT/janceva slika amor.jpg" style="width:100%">
-      <img src="PHOTOSHOT/megi.jpg" style="width:100%">
-      <img src="PHOTOSHOT/mila insta.jpg" style="width:100%">
+      <img src="janceva slika amor.jpg" style="width:100%">
+      <img src="megi.jpg" style="width:100%">
+      <img src="mila insta.jpg" style="width:100%">
     </div>
 
     <div class="w3-half">
         <br>
         <br>
         <br>
-      <img src="PHOTOSHOT/slika marttina.jpg" style="width:100%">
-      <img src="PHOTOSHOT/sliki za insta rodenden.jpg" style="width:100%">
-      <img src="PHOTOSHOT/sliki za insta.jpg" style="width:100%">
+      <img src="slika marttina.jpg" style="width:100%">
+      <img src="sliki za insta rodenden.jpg" style="width:100%">
+      <img src="sliki za insta.jpg" style="width:100%">
     </div>
 
     <div class="w3-half">
         <br>
         <br>
         <br>
-      <img src="PHOTOSHOT/tanja 2.jpg" style="width:100%">
-      <img src="PHOTOSHOT/viktorija roidenden 2 slika insta.jpg" style="width:100%">
+      <img src="tanja 2.jpg" style="width:100%">
+      <img src="viktorija roidenden 2 slika insta.jpg" style="width:100%">
     </div>
 
     <div class="w3-half">
         <br>
         <br>
         <br>
-      <img src="PHOTOSHOT/tanja insta.jpg" style="width:100%">
+      <img src="tanja insta.jpg" style="width:100%">
     </div>
 
   </div>
